add sample project page

--- a/_includes/font-editor.html
+++ b/_includes/font-editor.html
@@ -27,7 +27,7 @@
     </div>
   {% endif %}
 
-  <div class="font-editor-control">
+  <div class="font-editor-control d-flex align-items-center">
     <input
       class="font-editor-size"
       type="range"
