--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
   font-style: normal;
   padding: 5vw;
   font-size: 1.5vw;
+  -webkit-font-smoothing: antialiased;
 }
 
 h1, h2, h3, h4, h5, h6,
