--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/styles.css"/>
     <link rel="stylesheet" href="https://use.typekit.net/vui3lin.css">
   </head>
-  <body>
+  <body class="{{ page.body_class }}">
     {{ content }}
     <script src="/scripts.js"></script>
   </body>
