--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+body.homepage {
+  background: #f00;
+  color: #000;
+}
+
 h1, h2, h3, h4, h5, h6,
 p, ol, ul {
   margin-bottom: 1rem;
@@ -33,8 +38,13 @@ a {
   text-decoration: none;
   transition: all 0.2s ease-in-out;
 }
+
 a:hover {
   color: #E01E1E;
+}
+
+body.homepage a:hover {
+  color: #fff;
 }
 
 .viewport {
@@ -43,6 +53,11 @@ a:hover {
 .viewport-50 {
   height: 50vh;
 }
+
+.project-thumb {
+  margin-bottom: 300px;
+}
+
 .d-flex {
   display: flex;
 }
@@ -105,6 +120,9 @@ a:hover {
   position: fixed;
   bottom: 5vh;
   right: 5vh;
+  background: #000;
+  height: 7vw;
+  border-radius: 50%;
 }
 .project-page-logo {
   display: flex;
@@ -238,7 +256,6 @@ a:hover {
 .font-editor-controls {
   display: flex;
   align-items: center;
-  border-top: 1px solid #fff;
   margin-bottom: 2em;
 }
 
