--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   background: #000;
   color: #fff;
@@ -13,6 +17,7 @@ body {
   padding: 5vw;
   font-size: 1.5vw;
   -webkit-font-smoothing: antialiased;
+  transition: color 0.2s ease-in-out;
 }
 
 body.homepage {
@@ -35,7 +40,6 @@ h6 {
 a {
   color: inherit;
   text-decoration: none;
-  transition: all 0.2s ease-in-out;
 }
 
 a:hover {
@@ -128,6 +132,10 @@ body.homepage a:hover {
   display: flex;
   justify-content: center;
   margin-bottom: 5vh;
+}
+
+article > div {
+  margin-bottom: 2rem;
 }
 
 
@@ -259,12 +267,15 @@ body.homepage a:hover {
   margin-bottom: 2em;
 }
 
-.font-editor-preview {
-  margin-bottom: 10rem;
-}
-
 .font-editor-control {
   min-width: 100%;
+}
+
+.font-editor-preview {
+  display: inline-block;
+}
+.font-editor-preview.is-editing {
+  display: block;
 }
 
 @media all and (min-width: 700px) {
