--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,25 @@ body {
   font-family: neue-haas-unica;
   font-weight: 700;
   font-style: normal;
-  padding: 5vw;
   font-size: 1.5vw;
   -webkit-font-smoothing: antialiased;
-  transition: color 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 body.homepage {
   color: #000;
+}
+
+main {
+  padding: 5vw;
+}
+
+body > footer {
+  height: 300px;
+  background-image: linear-gradient(rgba(0,0,0,0) 70%, #f33 170%);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 h1, h2, h3, h4, h5, h6,
@@ -40,6 +51,8 @@ h6 {
 a {
   color: inherit;
   text-decoration: none;
+  transition: color 0.2s ease-in-out;
+
 }
 
 a:hover {
