--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,5 +3,5 @@
   <a href="{{ site.links.instagram }}">Instagram</a>
   <a href="{{ site.links.tumblr }}">Tumblr</a>
   <a href="{{ site.links.arena }}">Arena</a>
-  <a href="{{ site.links.arena }}">WIP</a>
+  <a href="/wip">WIP</a>
 </footer>
