Disable focus on contendeditable elements

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,11 @@ body.homepage a:hover {
   color: #fff;
 }
 
+
+[contenteditable]:focus {
+  outline: 0px solid transparent;
+}
+
 .viewport {
   height: 100vh;
 }
