--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body > footer {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  font-size: .8em;
 }
 
 h1, h2, h3, h4, h5, h6,
