--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Jean's Dope Site</title>
+    <title>Jean Wojciechowski</title>
     <link rel="stylesheet" href="/styles.css"/>
     <link rel="stylesheet" href="https://use.typekit.net/vui3lin.css">
   </head>
