--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,11 +8,11 @@ layout: base
 
 <div class="d-flex viewport-50">
   <div class="w-50">
-    <h2>{{ page.project_name }}</h2>
+    <h2 class="font-weight-light">{{ page.project_name }}</h2>
   </div>
   <div class="w-50">
-    <h3>{{ page.project_headline }}</h3>
-    <p>{{ page.project_brief }}</p>
+    <h2 class="font-weight-light">{{ page.project_headline }}</h2>
+    <p class="font-weight-light">{{ page.project_brief }}</p>
   </div>
 </div>
 
