--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,15 @@ body {
   font-family: neue-haas-unica;
   font-weight: 700;
   font-style: normal;
-  font-size: 1.5vw;
   -webkit-font-smoothing: antialiased;
 }
 
 body.homepage {
   color: #000;
+}
+
+.font-weight-light {
+  font-weight: 300;
 }
 
 main {
@@ -40,17 +43,11 @@ body > footer a {
   margin-right: 4em;
 }
 
+h1 {}
+
 h1, h2, h3, h4, h5, h6,
 p, ol, ul {
   margin-bottom: 1rem;
-}
-
-h1 {
-  font-size: 4vw;
-}
-
-h6 {
-  font-size: 1.5vw;
 }
 
 a {
@@ -348,38 +345,158 @@ article > div {
   height: 0;
 }
 
+.font-editor {
+  display: flex;
+  flex-direction: column;
+}
+
 .font-editor-controls {
   display: flex;
   align-items: center;
   margin-bottom: 2em;
 }
 
+.font-editor-controls .select,
+.font-editor-controls .multi-select,
+.font-editor-controls .toggle-alignment,
+.font-editor-controls input[type="range"] {
+  display: none;
+}
+
+.font-editor-controls .item {
+  margin-right: 40px;
+}
+
 .font-editor-controls .select {
+  white-space: nowrap;
   position: relative;
   height: 30px;
-  width: 300px;
   cursor: default;
   user-select: none;
 }
-.font-editor-controls .select-options {
+.font-editor-controls .select .current-option {
+  display: inline-block;
+  position: relative;
+  padding-right: 50px;
+}
+.font-editor-controls .select .current-option::after {
+  content: '';
+  position: absolute;
+  top: 18px;
+  right: 0;
+  width: 0;
+  border: 10px solid transparent;
+  border-top-color: #fff;
+  pointer-events: none;
+}
+.font-editor-controls .select.is-active .current-option::after {
+  display: none;
+}
+.font-editor-controls .multi-select {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  cursor: default;
+  user-select: none;
+}
+.font-editor-controls .opentype-icon {
+  width: 40px;
+  height: 40px;
+  background: url('/images/ui/o-type.svg');
+  background-size: 40px 40px;
+  background-position: center;
+}
+.font-editor-controls .select-options,
+.font-editor-controls .multi-select-options {
   display: none;
   position: absolute;
   background: #000;
+  padding: 0 20px;
 }
-.font-editor-controls .select-options.is-active {
+.font-editor-controls .select-options {
+  margin-left: -20px;
+  width: auto;
+}
+.font-editor-controls .multi-select-options {
+  right: -20px;
+  width: 300px;
+  top: 40px;
+}
+.font-editor-controls .select.is-active .select-options,
+.font-editor-controls .multi-select-options.is-active  {
   display: block;
 }
 
-input[type="range"] {
+.font-editor-controls .select-options div,
+.font-editor-controls .multi-select-options div {
+  transition: color 0.1s ease-in-out;
+}
+
+.font-editor-controls .select-options div:hover {
+  color: #f33;
+}
+
+.font-editor-controls div,
+.font-editor-controls .select-options div,
+.font-editor-controls .multi-select-options div {
+  min-height: 45px;
+}
+.font-editor-controls .multi-select-options div {
+  display: flex;
+  justify-content: flex-end;
+  opacity: .3;
+  transition: all .2s ease-in-out;
+}
+.font-editor-controls .multi-select-options div.is-active {
+  opacity: 1;
+}
+.font-editor-controls .multi-select-options div:not(.is-active):hover {
+  opacity: .5;
+}
+
+.font-editor-controls .toggle-alignment {
+  margin-left: 40px;
+  width: 100px;
+  align-items: center;
+  justify-content: space-around;
+}
+.font-editor-controls .toggle-alignment .left,
+.font-editor-controls .toggle-alignment .center {
+  width: 40px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-size: 40px 40px;
+  background-position: center;
+}
+
+.font-editor-controls .toggle-alignment .left {
+  background-image: url('/images/ui/left-align.svg');
+}
+
+.font-editor-controls .toggle-alignment .center {
+  background-image: url('/images/ui/center-align.svg');
+  opacity: .3;
+}
+
+.font-editor-controls .toggle-alignment.is-active .left {
+  opacity: .3;
+}
+
+.font-editor-controls .toggle-alignment.is-active .center {
+  opacity: 1;
+}
+
+.font-editor-controls input[type="range"] {
   -webkit-appearance: none;
-  width: 100%;
+  width: 200px;
+  margin-right: auto;
   height: 1px;
   border-radius: 5px;
   background: #fff;
   outline: none;
 }
 
-input[type="range"]::-webkit-slider-thumb {
+.font-editor-controls input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 15px;
@@ -389,10 +506,81 @@ input[type="range"]::-webkit-slider-thumb {
   cursor: pointer;
 }
 
-input[type="range"]::-moz-range-thumb {
+.font-editor-controls input[type="range"]::-moz-range-thumb {
   width: 15px;
   height: 15px;
   border-radius: 50%;
   background: #fff;
   cursor: pointer;
+}
+
+.font-editor:hover .hover-transition,
+.project-thumb:hover .hover-transition {
+  opacity: 1;
+  top: 0;
+}
+
+.hover-transition {
+  opacity: 0;
+  position: relative;
+
+  top: 40px;
+  transition: all .3s ease-in-out;
+}
+
+
+/* Modal */
+
+.backdrop {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 0 10vw;
+  background: rgba(0,0,0,0.4);
+  z-index: 1000;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-active {
+  opacity: 1;
+  transition: opacity .2s ease-in-out;
+  pointer-events: unset;
+}
+.backdrop img {
+  position: absolute;
+  max-height: 100%;
+}
+
+
+/* D E S K T O P  E N H A N C E M E N T S */
+
+@media screen and (min-width: 800px) {
+  body {
+    font-size: 1.5vw;
+  }
+  h1 {
+    font-size: 4vw;
+  }
+  h2 {
+    font-size: 2.5vw;
+  }
+  h6 {
+    font-size: 1.5vw;
+  }
+
+  .font-editor-controls .select,
+  .font-editor-controls .multi-select,
+  .font-editor-controls .toggle-alignment {
+    display: flex;
+  }
+
+  .font-editor-controls input[type="range"] {
+    display: unset;
+  }
 }
