--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -16,4 +16,15 @@ layout: base
   </div>
 </div>
 
+{% if page.typeface %}
+  {% assign typeface = site.typefaces | where: 'title', page.typeface | first %}
+  {% for type_tester in typeface.project_page_type_testers %}
+    <article>
+      <div>
+        {% include font-editor.html typeface=typeface advanced=true default_font_option=type_tester.font_option default_text=type_tester.default_text %}
+      </div>
+    </article>
+  {% endfor %}
+{% endif %}
+
 {{ content }}
