Only show advanced options in project page

--- a/_includes/font-editor.html
+++ b/_includes/font-editor.html
@@ -7,5 +7,6 @@
   data-opentype-features="{{ opentype_features }}"
   data-default-font-option="{{ include.default_font_option }}"
   data-default-text="{{ include.default_text }}"
+  data-is-advanced="{{ include.advanced }}"
 >
 </div>
