--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,10 @@ img {
 .project-thumb {
   margin-bottom: 300px;
 }
+.project-headline-homepage {
+  margin-bottom: 4em;
+  text-transform: uppercase;
+}
 
 .d-flex {
   display: flex;
@@ -105,6 +109,10 @@ img {
 .w-50 { width: 50%; }
 .text-uppercase {
   text-transform: uppercase;
+}
+
+.mb-0 {
+  margin-bottom: 0;
 }
 
 .project-thumbnail {
