--- a/_layouts/wip.html
+++ b/_layouts/wip.html
@@ -15,9 +15,9 @@ layout: default
 </div>
 
 <div class="wip-layout">
-  {% for image in page.images %}
-    <a class="image-container modal-link" href="{{ image }}" target="_blank">
-      <img src="{{ image }}" alt=""/>
+  {% for post in site.posts %}
+    <a class="image-container modal-link" href="{{ post.image }}" target="_blank">
+      <img src="{{ post.image }}" alt=""/>
     </a>
   {% endfor %}
 </div>
