Fix wip link issues

--- a/_layouts/wip.html
+++ b/_layouts/wip.html
@@ -2,10 +2,12 @@
 layout: default
 ---
 
-<div class="hidden-meanings">
-  <a href="/" id="logo" class="project-page-logo">
-    <img src="/svgs/logo.svg" alt=""/>
-  </a>
+<div class="wip-header">
+  <div id="logo" class="project-page-logo">
+    <a href="/">
+      <img src="/svgs/logo.svg" alt=""/>
+    </a>
+  </div>
   <div id="logo-space"></div>
   In this page you<br />
   will find sketches,<br />
