--- a/styles.css
+++ b/styles.css
@@ -49,14 +49,22 @@ h1, h2, h3, h4, h5, h6,
 p, ol, ul {
   margin-bottom: 1rem;
 }
+.more-link {
+  margin-top: 1rem;
+  cursor: pointer;
+  transition: color 0.2s ease-in-out;
+}
+.more-link:hover {
+  color: #fff;
+}
 
 a {
   color: inherit;
   text-decoration: none;
   transition: color 0.2s ease-in-out;
-
 }
 
+.more-link,
 a:hover {
   color: #f33;
 }
@@ -148,6 +156,7 @@ img {
   line-height: 1.2;
 }
 
+.project-page-header,
 .project-page-type-tester {
   margin-bottom: 200px;
 }
